--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <div class="container">
       <aside class="sidebar">
         <div class="profile-img">
-          <i class="fas fa-user"></i>
+          <img src="" alt="" />
         </div>
         <h1>نیما صدقی</h1>
         <div class="job-title">توسعه‌دهنده وب و مدرس برنامه‌نویسی</div>
@@ -314,7 +314,7 @@
           </div>
           <div class="contact-item">
             <i class="fas fa-file-alt"></i>
-            <span>معافیت: دائم</span>
+            <span>وضعیت خدمت: معاف</span>
           </div>
         </div>
 
