--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     <div class="container">
       <aside class="sidebar">
         <div class="profile-img">
-          <img src="" alt="" />
+          <i class="fa fa-user" aria-hidden="true"></i>
         </div>
         <h1>نیما صدقی</h1>
         <div class="job-title">توسعه‌دهنده وب و مدرس برنامه‌نویسی</div>
