--- a/index.html
+++ b/index.html
@@ -294,7 +294,9 @@
           <i class="fa fa-user" aria-hidden="true"></i>
         </div>
         <h1>نیما صدقی</h1>
-        <div class="job-title">توسعه‌دهنده وب و مدرس برنامه‌نویسی</div>
+        <div class="job-title">
+          طراح و توسعه‌دهنده سایت (WordPress & Front-end)
+        </div>
         <div class="contact-info">
           <div class="contact-item">
             <i class="fas fa-phone"></i>
@@ -328,9 +330,18 @@
               <div class="progress" style="width: 95%"></div>
             </div>
           </li>
+
           <li class="skill-item">
             <div class="skill-name">
-              <span>JavaScript</span> <span>پیشرفته</span>
+              <span>WordPress</span> <span>پیشرفته</span>
+            </div>
+            <div class="progress-bar">
+              <div class="progress" style="width: 95%"></div>
+            </div>
+          </li>
+          <li class="skill-item">
+            <div class="skill-name">
+              <span>Python</span> <span>پیشرفته</span>
             </div>
             <div class="progress-bar">
               <div class="progress" style="width: 90%"></div>
@@ -338,20 +349,14 @@
           </li>
           <li class="skill-item">
             <div class="skill-name">
-              <span>WordPress</span> <span>متوسط</span>
+              <span>JavaScript</span> <span>متوسط</span>
             </div>
             <div class="progress-bar">
               <div class="progress" style="width: 60%"></div>
             </div>
           </li>
           <li class="skill-item">
-            <div class="skill-name"><span>Python</span> <span>متوسط</span></div>
-            <div class="progress-bar">
-              <div class="progress" style="width: 60%"></div>
-            </div>
-          </li>
-          <li class="skill-item">
-            <div class="skill-name"><span>C++</span> <span>متوسط</span></div>
+            <div class="skill-name"><span>C++ </span> <span>متوسط</span></div>
             <div class="progress-bar">
               <div class="progress" style="width: 50%"></div>
             </div>
@@ -370,7 +375,7 @@
           </li>
           <li class="skill-item">
             <div class="skill-name">
-              <span>Office (Word/Excel)</span> <span>پیشرفته</span>
+              <span>Office (Word/Excel/...)</span> <span>پیشرفته</span>
             </div>
           </li>
         </ul>
@@ -399,12 +404,12 @@
             <i class="fas fa-user-circle"></i> درباره من
           </h2>
           <p>
-            مدرس برنامه‌نویسی و توسعه‌دهنده وب با تجربه تدریس مبانی برنامه‌نویسی
-            و طراحی سایت. مسلط به Python، SQLite، Tkinter، HTML، CSS و
-            JavaScript و آشنا با وردپرس و ابزارهای مرتبط. علاقه‌مند به یادگیری
-            تکنولوژی‌های جدید و انتقال دانش به دیگران. آماده همکاری با موسسات
-            آموزشی یا تیم‌های توسعه برای ارائه آموزش‌های کاربردی یا پیاده‌سازی
-            پروژه‌های وب.
+            توسعه‌دهنده وب و متخصص وردپرس با پیش‌زمینه مهندسی کامپیوتر و بیش از
+            2 سال تجربه در حوزه آموزش و اجرای پروژه‌های وب. مسلط به شخصی‌سازی
+            قالب‌ها و افزونه‌ها با استفاده از HTML، CSS و JavaScript و دارای
+            تجربه در کار با پایگاه‌ داده‌های Sqlite. تمرکز اصلی من بر ارائه
+            راه‌حل‌های بهینه، طراحی ریسپانسیو و تبدیل نیازهای تجاری به
+            وب‌سایت‌های کاربردی و سریع است.
           </p>
         </section>
 
@@ -419,28 +424,62 @@
             <span class="date">مهر ۱۴۰۳ - تا کنون (۱ سال و ۴ ماه)</span>
             <div class="description">
               <ul>
-                <li>آموزش برنامه‌نویسی HTML، CSS و JavaScript</li>
-                <li>تدریس طراحی و توسعه وب به دانشجویان</li>
-                <li>طراحی و اجرای پروژه‌های عملی برای یادگیری مؤثر</li>
-                <li>ایجاد و بهبود محتوای آموزشی مناسب</li>
+                <li>
+                  مدرس توسعه‌دهنده وب؛ متخصص در تبدیل طرح‌های گرافیکی به کدهای
+                  فرانت‌اِند (JavaScript/HTML/CSS).
+                </li>
+                <li>
+                  طراحی سرفصل‌های آموزشی برای بهینه‌سازی دیتابیس‌های سبک
+                  (Sqlite) در پروژه‌های وب.
+                </li>
+                <li>
+                  پیاده‌سازی پروژه‌های عملی جهت آموزش استانداردهای روز طراحی
+                  رابط کاربری (UI).
+                </li>
               </ul>
             </div>
           </div>
 
           <div class="timeline-item">
-            <div class="job-role">مدرس برنامه‌نویسی و طراحی سایت</div>
+            <!-- <div class="job-role">مدرس برنامه‌نویسی و طراحی سایت</div> -->
             <div class="company">آموزشگاه فنی حرفه‌ای کیان کده</div>
             <span class="date">تیر ۱۴۰۴ - تا کنون (۷ ماه)</span>
+            <div class="description">
+              <ul>
+                <li>
+                  مدرس ارشد طراحی سایت و وردپرس با تمرکز بر پیاده‌سازی پروژه‌های
+                  فروشگاهی و شرکتی.
+                </li>
+                <li>
+                  آموزش و اجرای عملی سفارشی‌سازی قالب‌های وردپرس با استفاده از
+                  HTML5 و CSS3.
+                </li>
+                <li>
+                  راهبری دانشجویان در پیاده‌سازی بیش از 10 پروژه سایت ریسپانسیو
+                  و بهینه.
+                </li>
+              </ul>
+            </div>
           </div>
 
           <div class="timeline-item">
-            <div class="job-role">مدرس برنامه‌نویسی و توسعه‌دهنده وب</div>
+            <!-- <div class="job-role">مدرس برنامه‌نویسی و توسعه‌دهنده وب</div> -->
             <div class="company">موسسه آموزشی ره‌جویان</div>
             <span class="date">آذر ۱۴۰۳ - تیر ۱۴۰۴ (۷ ماه)</span>
             <div class="description">
               <ul>
-                <li>آموزش کار با ابزارهای طراحی وب</li>
-                <li>تدریس مفاهیم پایه و پیشرفته وب</li>
+                <li>
+                  مدرس برنامه‌نویسی وب و وردپرس؛ متمرکز بر ابزارهای نوین طراحی و
+                  توسعه سایت.
+                </li>
+                <li>
+                  آموزش کار با ابزارهای طراحی وب و فریم‌ورک‌های CSS برای افزایش
+                  سرعت توسعه سایت.
+                </li>
+                <li>
+                  ارائه مشاوره‌های فنی برای پروژه‌های فریلنسری دانشجویان در حوزه
+                  وردپرس.
+                </li>
               </ul>
             </div>
           </div>
